--- a/exercise 3/FashionMinst.ipynb
+++ b/exercise 3/FashionMinst.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Beast\\AppData\\Roaming\\Python\\Python36\\site-packages\\torchvision\\datasets\\mnist.py:498: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  ..\\torch\\csrc\\utils\\tensor_numpy.cpp:180.)\n",
+      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -34,22 +45,13 @@
     "batches = 600\n",
     "x_train_batches = torch.split(x_train, batches)\n",
     "y_train_batches = torch.split(y_train, batches)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "C:\\Users\\Beast\\AppData\\Roaming\\Python\\Python36\\site-packages\\torchvision\\datasets\\mnist.py:498: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  ..\\torch\\csrc\\utils\\tensor_numpy.cpp:180.)\n",
-      "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class ConvolutionalNeuralNetworkModel(nn.Module):\n",
     "    def __init__(self):\n",
@@ -78,38 +80,24 @@
     "    # Accuracy\n",
     "    def accuracy(self, x, y):\n",
     "        return torch.mean(torch.eq(self.f(x).argmax(1), y.argmax(1)).float()).to(device)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "source": [
-    "model = ConvolutionalNeuralNetworkModel().to(device)\n",
-    "\n",
-    "# Optimize: adjust W and b to minimize loss using stochastic gradient descent\n",
-    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
-    "for epoch in range(20):\n",
-    "    for batch in range(len(x_train_batches)):\n",
-    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward()  # Compute loss gradients\n",
-    "        optimizer.step()  # Perform optimization by adjusting W and b,\n",
-    "        optimizer.zero_grad()  # Clear gradients for next step\n",
-    "\n",
-    "    print(\"accuracy = %s\" % model.accuracy(x_test.to(device), y_test.to(device))) "
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "C:\\Users\\Beast\\AppData\\Roaming\\Python\\Python36\\site-packages\\torch\\nn\\functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  ..\\c10/core/TensorImpl.h:1156.)\n",
       "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "accuracy = tensor(0.8732, device='cuda:0')\n",
       "accuracy = tensor(0.8903, device='cuda:0')\n",
@@ -134,30 +122,42 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "model = ConvolutionalNeuralNetworkModel().to(device)\n",
+    "\n",
+    "# Optimize: adjust W and b to minimize loss using stochastic gradient descent\n",
+    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
+    "for epoch in range(20):\n",
+    "    for batch in range(len(x_train_batches)):\n",
+    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward()  # Compute loss gradients\n",
+    "        optimizer.step()  # Perform optimization by adjusting W and b,\n",
+    "        optimizer.zero_grad()  # Clear gradients for next step\n",
+    "\n",
+    "    print(\"accuracy = %s\" % model.accuracy(x_test.to(device), y_test.to(device))) "
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit"
-  },
-  "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
