--- a/exercise 8/DQN-cartpole.ipynb
+++ b/exercise 8/DQN-cartpole.ipynb
@@ -233,6 +233,70 @@
     "\n",
     "Since DQN is a RNN the RMSprop optimizer is used, which beats out normal gradient decent and adam optimizers for RNN, read more here: [Optimizers](https://ruder.io/optimizing-gradient-descent/index.html)\n",
     "\n",
+    "## Code\n",
+    "Most of the logic here is the same as in QLearn-cartpole.ipynb\n",
+    "\n",
+    "When training we firstly loop for n episodes given to the model on creation. For each episode we reset the env as the init state\n",
+    " ```python  \n",
+    " self.preprocess_state(self.env.reset())\n",
+    "\n",
+    " def preprocess_state(self, state):\n",
+    "        return np.reshape(state, [1, self.state_size]) \n",
+    "  \n",
+    " ```\n",
+    "\n",
+    "\n",
+    "state is always transformed into and (1, n) array so it can be used as an input to the model. for every episode we loop until the agent has either failed by tiping or won by getting 200 points. we then choose an action, and preform that action.\n",
+    "```python\n",
+    "action = self.action(state)\n",
+    "next_state, reward, done, _ = self.env.step(action)\n",
+    "\n",
+    "\n",
+    " def action(self, state):\n",
+    "    if np.random.random() <= self.epsilon:\n",
+    "        return random.randrange(self.action_size)\n",
+    "    else:\n",
+    "        return np.argmax(self.model.predict(state))\n",
+    "```\n",
+    "when choosing an action we either explore or exploit this is chosen by generating a random number between 0, 1 and then comparing it to epsilon. if the number is smaller than epsilon we use the model to predict a action (exploit) same as in normal q-learning if the number is lager than epsilon we choose a random action in the env.\n",
+    "\n",
+    "\n",
+    "In normal q-learn we would now update the q table with new q values by Optimizing the q function, but in DQN we instead push the current state, action, reward, next state, and if the agent is done or not. Since we dont update q-values in a DQN we instead use the stored values to \"replay\" the previous attempt and train on the model on the values stored in replay memory which is where we put all the values from each step during the while loop. This is done by firstly picking out a subset of values from the replay memory\n",
+    "```python\n",
+    "minibatch = random.sample(self.memory, min(len(self.memory), self.batch_size))\n",
+    "```\n",
+    "we then use the model to predict q values for the current state and the next state\n",
+    "\n",
+    "```python\n",
+    "target = self.model.predict(states)\n",
+    "target_next = self.model.predict(next_states)\n",
+    "```\n",
+    "we then update the target values which we are going to use for training with the predicted next\n",
+    "\n",
+    "```python\n",
+    "def update_q_func(self,reward, next_state, done):\n",
+    "    if done:\n",
+    "        return reward\n",
+    "    else:\n",
+    "        return reward + self.gamma * np.max(next_state)\n",
+    "\n",
+    "def update_q_values(self, minibatch, target, target_next ):\n",
+    "    for index, (_, action, reward, _, done) in enumerate(minibatch):\n",
+    "        target[index][action] = self.update_q_func(reward, target_next[index], done)\n",
+    "```\n",
+    "\n",
+    "then we train the model with the the states from the batch and the targets\n",
+    "```python\n",
+    "self.model.fit(np.array(states), np.array(target), batch_size=self.batch_size, verbose=0)\n",
+    "```\n",
+    "we then update the epsilon value to reduce it since the model is now better so we should trust it more and exploit more then we explore.\n",
+    "\n",
+    "```python\n",
+    "def update_epsilon(self):\n",
+    "    if self.epsilon > self.min_epsilon:\n",
+    "        self.epsilon *= self.epsilon_decay_rate\n",
+    "```\n",
+    "\n",
     "## Side notes\n",
     "With a lower epsilon the DQN seems to preform better faster, this might be because it results in less exploration and more exploitation which might in this case be good.\n",
     "\n",
