--- a/exercise 8/DQN-cartpole.ipynb
+++ b/exercise 8/DQN-cartpole.ipynb
@@ -17,15 +17,14 @@
    "outputs": [],
    "source": [
     "import gym\n",
-    "import math\n",
     "import random\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from collections import deque\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense,InputLayer\n",
-    "from tensorflow.keras.optimizers import Adam, RMSprop\n",
-    "from tensorflow.keras.models import Model, load_model\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.optimizers import  RMSprop\n",
+    "from tensorflow.keras.models import load_model\n",
     "\n",
     "MODEL_FILE_NAME = \"dqncartpole.h5\"\n",
     "env = gym.make('CartPole-v0')\n",
@@ -63,7 +62,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class DQNQLearnCartPoleSolver():\n",
     "    def __init__(self, env,  input_shape, action_shape, episodes, epsilon_decay_rate=0.995, min_epsilon=0.001):\n",
     "        self.input_size = input_shape\n",
@@ -73,32 +71,29 @@
     "        self.memory = deque([],maxlen=2000)\n",
     "        self.min_epsilon=min_epsilon\n",
     "        self.epsilon_decay_rate = epsilon_decay_rate\n",
-    "        self.epsilon = 0.35\n",
+    "        self.epsilon = 0.1\n",
     "        self.state_size = input_shape\n",
     "        self.batch_size = 128\n",
-    "        self.gamma = 0.95\n",
-    "        self.train_start = 1000\n",
+    "        self.gamma = 0.99\n",
+    "        self.train_start = 128\n",
     "        self.model = Sequential()\n",
-    "        self.model.add(InputLayer(input_shape))\n",
-    "        self.model.add(Dense(512, input_dim=input_shape, activation='relu', kernel_initializer='he_uniform'))\n",
-    "        self.model.add(Dense(256, activation='relu', kernel_initializer='he_uniform'))\n",
-    "        self.model.add(Dense(64,activation='relu', kernel_initializer='he_uniform'))\n",
+    "        self.model.add(Dense(24, input_dim=input_shape, activation='relu', kernel_initializer='he_uniform'))\n",
     "        self.model.add(Dense(action_shape, activation=\"linear\", kernel_initializer='he_uniform'))\n",
     "\n",
     "        self.model.compile(loss=\"mse\", optimizer=RMSprop(\n",
-    "            learning_rate=0.00025, epsilon=0.01), metrics=[\"accuracy\"])\n",
+    "            learning_rate=0.001), metrics=[\"accuracy\"])\n",
+    "\n",
     " \n",
     "\n",
     "    def action(self, state):\n",
     "        # print(f\" rand nr {np.random.random()}  eps {self.epsilon}\")\n",
-    "        if np.random.random() <= self.epsilon:\n",
-    "            return random.randrange(self.action_size)\n",
+    "        if np.random.rand() <= self.epsilon:\n",
+    "            return self.env.action_space.sample()\n",
     "        else:\n",
     "            return np.argmax(self.model.predict(state))\n",
     "\n",
     "    def remember(self, state, action, reward, next_state, done):\n",
     "        self.memory.append((state, action, reward, next_state, done))\n",
-    "        \n",
     "\n",
     "    def preprocess_state(self, state):\n",
     "        return np.reshape(state, [1, self.state_size]) \n",
@@ -114,8 +109,8 @@
     "            target[index][action] = self.update_q_func(reward, target_next[index], done)\n",
     "\n",
     "    def update_epsilon(self):\n",
-    "        if self.epsilon > self.min_epsilon:\n",
-    "            self.epsilon *= self.epsilon_decay_rate\n",
+    "        self.epsilon *= self.epsilon_decay_rate\n",
+    "        self.epsilon = max(self.min_epsilon, self.epsilon)\n",
     "\n",
     "\n",
     "    def replay(self):\n",
@@ -151,8 +146,8 @@
     "                action = self.action(state)\n",
     "                next_state, reward, done, _ = self.env.step(action) \n",
     "                next_state =  self.preprocess_state(next_state)\n",
-    "                step +=1\n",
     "                reward = self.get_reward(done, step, reward)\n",
+    "                step +=1\n",
     "                self.remember(state, action, reward, next_state, done)\n",
     "                state = next_state\n",
     "            scores.append(step)\n",
@@ -160,7 +155,6 @@
     "            if step == 200:\n",
     "                print(f\"Saving trained model as {MODEL_FILE_NAME}\")\n",
     "                self.model.save(MODEL_FILE_NAME)\n",
-    "\n",
     "            self.replay()\n",
     "        print('Finished training!')\n",
     "\n",
@@ -192,17 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200  score\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.test()"
    ]
@@ -216,14 +202,11 @@
     "## Model\n",
     "```python\n",
     "self.model = Sequential()\n",
-    "self.model.add(Input(input_shape))\n",
-    "self.model.add(Dense(512, input_dim=input_shape, activation='relu', kernel_initializer='he_uniform'))\n",
-    "self.model.add(Dense(256, activation='relu', kernel_initializer='he_uniform'))\n",
-    "self.model.add(Dense(64,activation='relu', kernel_initializer='he_uniform'))\n",
+    "self.model.add(Dense(24, input_dim=input_shape, activation='relu',kernel_initializer='he_uniform'))\n",
     "self.model.add(Dense(action_shape, activation=\"linear\", kernel_initializer='he_uniform'))\n",
     "```\n",
     "\n",
-    "We start with an input layer of the size of the observation space of the enviorment as we can see at the top of the file it is 4, then comes the  neural network part of the model which are all the dense layers, which creates hidden layers with n nodes. Every Hidden layer is wraped with a relu activation function which simplifies the data in the network, this is done by applying a max function on the value and 0 which leads to only positive values. Every layer also has a kernel initializer set to he uniform which initializes all the weights to non zero values in the different layers. More spesificly it draws samples from a uniform distribution within [-limit, limit] where limit is sqrt(6 / fan_in) where fan_in is the number of input units in the weight tensor. The last layer has activation linear to shape the output of the model.\n",
+    "We start with an input layer of the size of the observation space of the enviorment as we can see at the top of the file it is 4, then comes the  neural network part of the model which are all the dense layers, which creates hidden layers with n nodes. Every Hidden layer is wraped with a relu activation function which simplifies the data in the network, this is done by applying a max function on the value and 0 which leads to only positive values. Every layer also has a kernel initializer set to he uniform which initializes all the weights to non zero values in the different layers. More spesificly it draws samples from a uniform distribution within [-limit, limit] where limit is sqrt(6 / fan_in) where fan_in is the number of input units in the weight tensor. The last layer has activation linear to shape the output of the model. This model has only one hidden layer because the cartpole problem is a pretty easy problem to solve.\n",
     "\n",
     "## Optimizer\n",
     "```python\n",
